Rework security settings
Instead of having a list and then individually disable authentication
or authorization, which was confusing, we now have two lists.