@@ -8,7 +8,6 @@ package com.neo4j.server.security.enterprise.auth.integration.bolt;
 import com.neo4j.server.security.enterprise.configuration.SecuritySettings;
 import org.junit.Test;
 
-import java.util.Collections;
 import java.util.Map;
 
 import org.neo4j.graphdb.config.Setting;
@@ -18,7 +17,8 @@ public class NativeAndCredentialsOnlyIT extends EnterpriseAuthenticationTestBase
     @Override
     protected Map<Setting<?>, String> getSettings()
     {
-        return Collections.singletonMap( SecuritySettings.auth_providers, SecuritySettings.NATIVE_REALM_NAME + ",plugin-TestCredentialsOnlyPlugin" );
+        return Map.of( SecuritySettings.authentication_providers, SecuritySettings.NATIVE_REALM_NAME + ",plugin-TestCredentialsOnlyPlugin",
+                SecuritySettings.authorization_providers, SecuritySettings.NATIVE_REALM_NAME + ",plugin-TestCredentialsOnlyPlugin" );
     }
 
     @Test
